<resources>
    <string name="app_name">PureMusic</string>
    <string name="text_main">Pure Music Player</string>

    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="search">搜索</string>
    <string name="share">分享</string>
    <string name="save">保存</string>
    <string name="copyright">Copyright © 2017&#045;%d We</string>

    <string name="setting_key_mobile_network_play">mobile_network_play</string>
    <string name="setting_key_mobile_network_download">mobile_network_download</string>
    <string name="setting_key_sound_effect">sound_effect</string>
    <string name="setting_key_filter_size">filter_size</string>
    <string name="setting_key_filter_time">filter_time</string>
    <string name="unknown">未知</string>

    <!--Download / play Music-->
    <string name="tips">温馨提示</string>
    <string name="play_tips">当前处于移动网络，确定打开移动网络播放开关吗？</string>
    <string name="play_tips_sure">立即打开</string>
    <string name="download_tips">当前处于移动网络，下载将消耗较多流量，是否继续下载？</string>
    <string name="download_tips_sure">继续下载</string>
    <string name="downloading">正在下载……</string>


    <!--share Music-->
    <string name="share_music">我用%1$s分享了歌曲《%2$s》%3$s</string>
    <string name="unable_to_share">暂时无法分享</string>
    <string name="menu_setting">设置</string>
    <string name="menu_timer">定时播放</string>
    <string name="menu_night">夜间模式</string>
    <string name="menu_about">关于音乐</string>
    <string name="menu_exit">退出应用</string>
    <string name="tv_local_music">我的音乐</string>
    <string name="tv_online_music">在线音乐</string>

    <string name="timer_set">设置成功，将于%s分钟后关闭</string>
    <string name="timer_cancel">定时停止播放已取消</string>
    <string name="download_success">%s下载完成</string>
    <string name="no_local_music">暂无本地音乐</string>

    <string name="music_info">歌曲信息</string>

    <string name="no_permission_storage">没有存储空间权限，无法扫描本地歌曲！</string>
    <string name="no_permission_setting">没有权限，无法设置铃声，请授予权限</string>
    <string name="grant_permission_setting">授权成功，请在再次操作以设置铃声</string>
    <string name="no_permission_select_image">没有权限，无法选择图片！</string>
    <string name="setting_ringtone_success">设置铃声成功</string>
    <string name="delete_music">删除%s？</string>
    <string name="loading">加载中……</string>
    <string name="load_fail">加载失败, 请检查网络!</string>

    <string name="song_list_item_title_1">1.%1$s - %2$s</string>
    <string name="song_list_item_title_2">2.%1$s - %2$s</string>
    <string name="song_list_item_title_3">3.%1$s - %2$s</string>
    <string name="loading_more">正在加载更多…</string>
    <string name="now_download">正在下载：%s</string>
    <string name="unable_to_download">暂时无法下载</string>

    <string name="artist_info">歌手信息</string>
    <string name="artist_info_name">姓名：%s</string>
    <string name="artist_info_country">国籍：%s</string>
    <string name="artist_info_constellation">星座：%s</string>
    <string name="artist_info_stature">身高：%scm</string>
    <string name="artist_info_weight">体重：%skg</string>
    <string name="artist_info_birth">生日：%s</string>
    <string name="artist_info_intro">简介：%s</string>
    <string name="artist_info_empty">暂无歌手信息</string>

    <string name="now_play">正在播放：%s</string>
    <string name="unable_to_play">暂时无法播放</string>
    <string name="recent_update">最近更新：%s</string>
    <string name="music_ranking_list">主打榜单</string>
    <string name="loading_1">1.加载中…</string>
    <string name="loading_2">2.加载中…</string>
    <string name="loading_3">3.加载中…</string>
    <string name="song_title">歌曲</string>
    <string name="song_singer">歌手 - 专辑</string>
    <string name="music_info_title">标题</string>
    <string name="music_info_artist">艺术家</string>
    <string name="music_info_album">专辑</string>
    <string name="music_info_duration">播放时长</string>
    <string name="music_info_file_name">文件名称</string>
    <string name="music_info_file_size">文件大小</string>
    <string name="music_info_file_path">文件路径</string>
    <string name="search_empty">未找到相关结果</string>
    <string name="search_tips">请输入歌手名或者曲名</string>
    <string name="network">网络</string>
    <string name="mobile_network_play">使用移动网络播放</string>
    <string name="mobile_network_download">使用移动网络下载</string>
    <string name="play">播放</string>
    <string name="sound_effect">音效调节</string>
    <string name="device_not_support">您的设备不支持此功能</string>
    <string name="no_music">无音乐</string>
    <string name="play_time_start">00:00</string>
    <string name="mode_shuffle">随机播放</string>
    <string name="mode_one">单曲循环</string>
    <string name="mode_loop">列表循环</string>
    <string name="tab_title_main_1">本地音乐</string>
    <string name="tab_title_main_2">我的歌单</string>
    <string name="tab_title_main_3">发现音乐</string>

    <string name="title_activity_about">关于</string>
    <string name="about_version">版本: </string>
    <string name="about_email_intent">关于:MaterialDesign</string>
    <string name="about_not_found_email">没有邮件程序</string>
    <string name="about_card1_title">Material Design Demo</string>
    <string name="about_card1_message">嗨！很高兴见到你！</string>
    <string name="about_card2_title">如果你喜欢这个Demo，欢迎和我联系！</string>
    <string name="about_google_play">评价 (Google play)</string>
    <string name="about_email">反馈 (E-mail)</string>
    <string name="about_git_hub">源代码 (GitHub)</string>
    <string name="about_address">Beijing, China</string>
    <string name="about_source_licenses">开源许可</string>
    <string name="dialog_close">关闭</string>
    <string name="share_with">分享方式</string>
</resources>
