<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_night"
        android:title="@string/menu_night"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_timer"
        android:title="@string/menu_timer"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_setting"
        android:title="@string/menu_setting"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_exit"
        android:title="@string/menu_exit"
        app:showAsAction="never"/>
</menu>