<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_cover"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="fitXY"
            android:src="@drawable/default_cover"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_music_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/loading_1"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_music_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/loading_2"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_music_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/loading_3"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/v_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_gravity="bottom"
        android:layout_marginStart="110dp"
        android:background="?android:attr/listDivider" />
</FrameLayout>
